Revision history for Mason

** marks an incompatible change

2.21  Jul 12, 2012

2.20  Jul 12, 2012

* Improvements
  - Implement and document trailing slash policy - perl-mason/pull/11 (Pedro Melo)

* Fixes
  - Coerce undefined filter argument to the empty string (Tomohiro Hosaka)
  - Eliminate "=for html" POD entries, which were mangling metacpan.org output (Pedro Melo)
  - Fix some tests for Windows - perl-mason/pull/9 (Tomasz Konojacki)

* Documentation
  - Moved eg/blog to Poet

2.19  May 2, 2012

* Improvements
  - Add $.Tee standard filter, like $.Capture but outputs at same time

* Fixes
  - Fix for Moose 2.06 - RT #76793 (doy)

* Documentation
  - Mention Mason::Plugin::DefaultFilter more prominently

2.18  Apr 22, 2012

* Documentation
  - Add references to Poet, Mason's new companion web framework
  - Move Admin.pod to Setup.pod
  - Fix lots of broken links

2.17  Mar 27, 2012

* Documentation
  - Move FAQ pod sections up one level

* Fixes
  - Use make_immutable on generated Mason subclasses (Tomohiro Hosaka)
  - Properly quote paths when generating component class (Peter Franke)

2.16  Feb 24, 2012

* Documentation
  - Add Mason::Manual::FAQ, and various documentation improvements/fixes

* Fixes
  - Add prereq Exception::Class
  - Use Data::Dumper in Mason::Util

2.15  Nov 27, 2011

** Incompatible changes
  - Rename bin/mason to bin/mason.pl, to avoid conflict with the Mason firewall tool - RT #72497 (Florian)

* Fixes
  - Fix parser bug with filters and comment characters (Tomohiro Hosaka)

2.14  Sep 6, 2011

** Incompatible changes
  - Deprecate %%-lines, <%args> section and <%shared> section, which IMO add
    unnecessary TMTOWTDI. Standardize on the <%class> section and Moose 'has'
    declarations. These alternate syntaxes may make it into a plugin.

* Improvements
  - Allow applications to specify Mason subclasses by naming convention.
  - Document use of Mason subclasses in Mason::Manual::Subclasses.

* Fixes